clusters/core-ci/prow/staging/statusreconciler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statusreconciler
  namespace: ci-staging
  labels:
    app: statusreconciler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: statusreconciler
  template:
    metadata:
      labels:
        app: statusreconciler
    spec:
      serviceAccountName: statusreconciler
      terminationGracePeriodSeconds: 180
      containers:
      - name: statusreconciler
        image: us-docker.pkg.dev/k8s-infra-prow/images/status-reconciler:v20260217-999e46ca7
        args:
        - --dry-run=false
        - --continue-on-error=true
        - --plugin-config=/etc/plugins/plugins.yaml
        - --config-path=/etc/config/config.yaml
        - --job-config-path=/etc/jobs
        - --github-endpoint=http://ghproxy
        - --github-endpoint=https://api.github.com
        - --gcs-credentials-file=/etc/gcs-credentials/service-account.json
        - --status-path=gs://your-bucket-name/status-reconciler-status
        - --github-app-id=$(GITHUB_APP_ID)
        - --github-app-private-key-path=/etc/github/cert
        volumeMounts:
        - name: github-app-credentials
          mountPath: /etc/github
          readOnly: true
        - name: config
          mountPath: /etc/config
          readOnly: true
        - name: plugins
          mountPath: /etc/plugins
          readOnly: true
        - name: gcs-credentials
          mountPath: /etc/gcs-credentials
          readOnly: true
        - name: job-configs
          mountPath: /etc/jobs
          readOnly: true
      volumes:
      - name: github-app-credentials
        secret:
          secretName: openshift-prow-github-app
      - name: config
        configMap:
          name: config
      - name: plugins
        configMap:
          name: plugins
      - name: gcs-credentials
        secret:
          secretName: gce-sa-credentials-gcs-private
      - name: job-configs
        persistentVolumeClaim:
          claimName: job-configs-nfs
