clusters/core-ci/prow/staging/gangway.yaml
apiVersion: template.openshift.io/v1
kind: Template
metadata:
  name: gangway
  namespace: openshift
parameters:
- description: The session secret for the component.
  name: SESSION_SECRET
  generate: expression
  from: "[a-zA-Z0-9]{43}"
- description: "The namespace."
  name: NAMESPACE
  value: ci-staging
objects:
- apiVersion: v1
  kind: Route
  metadata:
    namespace: ${NAMESPACE}
    name: gangway
    annotations:
      haproxy.router.openshift.io/timeout: "90s"
  spec:
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: reencrypt
    to:
      kind: Service
      name: gangway
- apiVersion: v1
  kind: Service
  metadata:
    namespace: ${NAMESPACE}
    name: gangway
    labels:
      app: prow
      component: gangway
    annotations:
      service.alpha.openshift.io/serving-cert-secret-name: gangway-tls
  spec:
    selector:
      app: prow
      component: gangway
    ports:
    - name: main
      port: 443
      targetPort: 8443
    - name: metrics
      port: 9090
      protocol: TCP
      targetPort: 9090
    type: ClusterIP
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    namespace: ${NAMESPACE}
    name: gangway
    labels:
      app: prow
      component: gangway
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: prow
        component: gangway
    template:
      metadata:
        labels:
          app: prow
          component: gangway
      spec:
        serviceAccountName: gangway
        containers:
        - name: oauth-proxy
          image: quay.io/openshift/origin-oauth-proxy:4.16
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8443
            name: web
          args:
          - -provider=openshift
          - -https-address=:8443
          - -http-address=
          - -email-domain=*
          - -upstream=http://localhost:31999
          - -client-id=system:serviceaccount:${NAMESPACE}:gangway
          - -openshift-ca=/etc/pki/tls/cert.pem
          - -openshift-ca=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
          - '-openshift-sar=[{"resource": "namespaces", "verb": "get"},{"resource": "systemusers", "verb": "impersonate"}]'
          - '-openshift-delegate-urls={"/": {"resource": "namespaces", "verb": "get"}, "/bulk-job-status-update": {"resource": "systemusers", "verb": "impersonate"}}'
          - -client-secret-file=/var/run/secrets/kubernetes.io/serviceaccount/token
          - -cookie-secret-file=/etc/proxy/secrets/session_secret
          - -cookie-samesite=none
          - -tls-cert=/etc/tls/private/tls.crt
          - -tls-key=/etc/tls/private/tls.key
          volumeMounts:
          - mountPath: /etc/tls/private
            name: gangway-tls
          - mountPath: /etc/proxy/secrets
            name: session-secret
        - name: envoyproxy
          imagePullPolicy: Always
          image: quay-proxy.ci.openshift.org/openshift/ci:ci_tp-envoyproxy_latest
        - name: nginx-rate-limit
          imagePullPolicy: Always
          image: quay-proxy.ci.openshift.org/openshift/ci:ci_nging-rate-limit_latest
          volumeMounts:
          - mountPath: /var/cache/nginx
            name: nginx-cache
          - mountPath: /tmp
            name: nginx-tmp
        - name: gangway
          image: us-docker.pkg.dev/k8s-infra-prow/images/gangway:v20260217-999e46ca7
          args:
          - --config-path=/etc/config/config.yaml
          - --job-config-path=/etc/jobs
          - --github-app-id=$(GITHUB_APP_ID)
          - --github-app-private-key-path=/etc/github/cert
          - --github-endpoint=http://ghproxy
          - --github-endpoint=https://api.github.com
          - --github-graphql-endpoint=http://ghproxy/graphql
          - --grace-period=110s
          - --dry-run=false
          ports:
          - name: grpc
            containerPort: 32000
          - name: metrics
            containerPort: 9090
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 90
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz/ready
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 600
          volumeMounts:
          - name: github-app-credentials
            mountPath: /etc/github
            readOnly: true
          - name: service-account-token
            mountPath: /var/sa-token
          - mountPath: /etc/proxy/secrets
            name: session-secret
          - name: config
            mountPath: /etc/config
            readOnly: true
          - name: job-configs
            mountPath: /etc/jobs
            readOnly: true
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
        volumes:
        - name: github-app-credentials
          secret:
            secretName: openshift-ci-staging-prow-app
        - name: service-account-token
          projected:
            sources:
            - serviceAccountToken:
                path: token
        - name: config
          configMap:
            name: config
        - name: session-secret
          secret:
            secretName: gangway-session-secret
        - name: gangway-tls
          secret:
            secretName: gangway-tls
        - name: job-configs
          persistentVolumeClaim:
            claimName: job-configs-nfs
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-tmp
          emptyDir: {}
- apiVersion: v1
  kind: Secret
  metadata:
    namespace: ${NAMESPACE}
    name: gangway-session-secret
  stringData:
    session_secret: "${SESSION_SECRET}="
